<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/selectReason"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/fail_reason_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/customer_unreachable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateforpickup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectReason"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp">

        <TextView
            android:text="@string/retry_date"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.85"
            android:layout_height="wrap_content"
            android:id="@+id/datePick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/arrowIcon"
            android:layout_marginStart="8dp"

            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorMuted"/>
        <TextView
            android:text="@string/retry_time"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.85"
            android:layout_height="wrap_content"
            android:id="@+id/timePick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePick"
            app:layout_constraintEnd_toStartOf="@id/arrowIcon"
            android:layout_marginStart="8dp"

            android:layout_marginTop="2dp"
            android:visibility="gone"
            />

        <ImageView android:layout_width="24dp"
            app:layout_constraintWidth_percent="0.1" android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:layout_constraintStart_toEndOf="@id/datePick"
            android:id="@+id/arrowIcon"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/failure_comment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/dateforpickup"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/fail_submit_btn">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_failure_comments"
            android:background="@drawable/border"
            android:gravity="start"
            android:fontFamily="@font/roboto"
            android:id="@+id/failure_comments"
            android:paddingLeft="12dp"
            android:textCursorDrawable="@drawable/custom_edit_text_cursor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:textSize="14sp"
            android:paddingTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="5dp"
            android:textColorHint="@color/colorMuted" android:textColor="@color/colorHeader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fail_submit_btn"
        android:background="@drawable/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:textColor="#ffffff"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>