<resources>
    <string name="app_name">CourieMate</string>
    <string name="deliver">DELIVERED</string>
    <string name="network_connection_error">No internet connection</string>
    <string name="refuse">REFUSED</string>
    <string name="tx_registered">Transaction Saved</string>
    <string name="nothing_updated">Nothing updated</string>
    <string name="fail">FAILED</string>
    <string name="refusal_comment">Enter refusal comments</string>
    <string name="enter_note">Enter note</string>
    <string name="camera_label">Use Camera</string>
    <string name="gallery_label">Use Gallery</string>
    <string name="header_tasks_list">My Tasks</string>
    <string name="title_toolbar_task_list">Current Tasks</string>
    <string name="header_return_tasks_list">Return Tasks</string>
    <string name="header_order_detail">Order Details</string>
    <string name="expected_delivery">Expected Delivery</string>
    <string name="end_date_label">End Date</string>
...
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="return_tasks">Return tasks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="to_stanbic_bank">To Stanbic Bank</string>
    <string name="title_notifications">Notifications</string>
    <string name="payment_reg">Payment Registration</string>
    <string name="transaction_reg">Transaction Registration</string>
    <string name="transaction_history">Transaction History</string>
    <string name="btm_nav_title_call">Call</string>
    <string name="btm_nav_title_chat">Chat</string>
    <string name="btm_nav_title_more">More</string>
    <string name="title_activity_side_drawer">SideDrawer</string>
...
    <string name="NoInternetConnect">No Internet Connection</string>

    <string name="nav_item_call_operator">Call operator</string>
    <string-array name="failureReasons">
        <item>Select failure reason</item>
        <item>Postponment</item>
        <item>Absence</item>
        <item>Other</item>
    </string-array>

    <string-array name="taskSummaryValues">
        <item>Today</item>
        <item>3 Days</item>
...

    <string-array name="refusal_reasons">
        <item name="no_money">No Money</item>
        <item name="not_needed">Item not needed anymore</item>
        <item name="wrong_item">Wrong item</item>
        <item name="doubt_item">Doubt item</item>
        <item name="others">Others</item>
    </string-array>

    <string-array name="paid_to">
        <item name="stanbic_bank">Stanbic Bank</item>
        <item name="centenary_bank">Centenary Bank</item>
        <item name="mtn_mm">MTN Mobile Money</item>
...
