...
        android:text="@string/amount"
        android:textColor="@color/colorMuted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
...
        app:layout_constraintStart_toEndOf="@+id/task_memo_label"
        app:layout_constraintTop_toTopOf="@+id/task_memo_label"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signature_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
