<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/amount_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/roboto"
        android:text="@string/amount_paid_label"
        android:textColor="@color/colorMuted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amount_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_amount_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/colorHeader"
        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
        app:layout_constraintStart_toEndOf="@+id/amount_paid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/paid_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/paid_to_label"
        android:textColor="@color/colorMuted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_paid" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/amount_value"
        app:layout_constraintStart_toStartOf="@+id/amount_value"
        app:layout_constraintTop_toBottomOf="@+id/amount_value">

        <Spinner
            android:id="@+id/reason_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/paid_to"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/explain"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border"
        android:fontFamily="@font/roboto"
        android:gravity="top|left"
        android:hint="@string/enter_note"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:paddingLeft="12dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorHeader"
        android:textColorHint="@color/colorMuted"
        android:textCursorDrawable="@drawable/custom_edit_text_cursor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/upload_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upload_image_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explain" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".41"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_label_textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_camera" />

        <TextView
            android:id="@+id/camera_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/camera_label"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gallery_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".40"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="@+id/camera_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/gallery_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_gallery" />

        <TextView
            android:id="@+id/gallery_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/gallery_label"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/gallery_imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gallery_imageView"
            app:layout_constraintTop_toTopOf="@+id/gallery_imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploaded_constraintLayout"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_constraintLayout" >

        <ImageView
            android:id="@+id/uploaded_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UPLOAD"
        android:background="@drawable/bg_return_btn"
        android:fontFamily="@font/roboto"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>