...

    <string name="anroid_sms">com.google.android.apps.messaging:id/compose_message_text</string>
    <string name="action_message">ymsli.com.couriemate:id/action_message</string>
    <string name="action_call">ymsli.com.couriemate:id/action_call</string>
    <string name="action_location">ymsli.com.couriemate:id/action_location</string>
    <string name="action_time_picker">android:id/numberpicker_input</string>
    <string name ="action_camera_btn">com.android.camera2:id/shutter_button</string>
    <string name ="action_gallery_btn">com.google.android.apps.photos:id/title</string>

    <string name="anroid_dialpad">com.google.android.dialer:id/dialpad</string>
    <string name="filter_dialog_delivered">ymsli.com.couriemate:id/btn_filter_dialog_delivered</string>
    <string name="filter_dialog_delivering">ymsli.com.couriemate:id/btn_filter_dialog_delivering</string>
    <string name="filter_dialog_refused">ymsli.com.couriemate:id/btn_filter_dialog_refused</string>
...
